<resources>
    <string name="app_name" translatable="false">SaveThem</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">SaveThem</string>
    <string name="nav_header_subtitle" translatable="false">client@example.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_eshop" translatable="false">Eshop</string>
    <string name="menu_encyclopedia" translatable="false">Encyclopedia</string>
    <string name="menu_qr" translatable="false">QR Reader</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_mko_list" translatable="false">MKO List</string>
    <string name="menu_suggestion_form" translatable="false">Suggestion Form</string>
    <string name="menu_report_animal" translatable="false">Endangered Animal Noticed</string>
</resources>