<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.savethem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_encyclopedia"
        android:name="com.example.savethem.ui.encyclopedia.EncyclopediaFragment"
        android:label="@string/menu_encyclopedia"
        tools:layout="@layout/fragment_encyclopedia" />

    <fragment
        android:id="@+id/nav_mkolist"
        android:name="com.example.savethem.ui.mko_list.MKO_listFragment"
        android:label="@string/menu_mko_list"
        tools:layout="@layout/fragment_mko_list" />

    <fragment
        android:id="@+id/nav_eshop"
        android:name="com.example.savethem.ui.eshop.EshopFragment"
        android:label="@string/menu_eshop"
        tools:layout="@layout/fragment_eshop" />

    <fragment
        android:id="@+id/nav_suggestion"
        android:name="com.example.savethem.ui.suggestion_form.FormFragment"
        android:label="@string/menu_suggestion_form"
        tools:layout="@layout/fragment_suggestion_form" />

    <fragment
        android:id="@+id/nav_qr"
        android:name="com.example.savethem.ui.qr.qrFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.savethem.ui.animal_noticed.animalFragment"
        android:label="@string/menu_report_animal"
        tools:layout="@layout/report_animal_found" />
</navigation>